:alien: Update personal footer links

--- a/index.html
+++ b/index.html
@@ -590,21 +590,21 @@
             This page was built by
             <a
               id="me"
-              href="https://lnnk.in/aUdF"
+              href="https://github.com/Nix7amcm"
               target="_blank"
             >
-              AmyMc⚡
+              Nix7amcm⚡
             </a>
           </p>
           <div class="icons-wrapper">
             <a
-              href="https://lnnk.in/aUdF"
+              href="https://www.linkedin.com/in/amcm-8807/"
               target="_blank"
             >
               <img src="https://lnnk.in/haa4" />
             </a>
             <a
-              href="https://lnnk.in/hsaQ"
+              href="https://github.com/Nix7amcm"
               target="_blank"
             >
               <img src="https://lnnk.in/d1bu" />
