:bug: Some non-essential mods to solely meet FCC project requirements

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
   <body>
 
     <!--***** HEADER *****-->
-    <header>
+    <header id="header">
       <div class="logo-wrap">
         <a href="#">
           <img
+            id="header-img"
             class="logo"
             src="Assets/KingsleysCatnipLogoTP.png"
             alt="Kingsley's Kingdom of Herbs logo"
@@ -41,7 +42,7 @@
       </div>
 
       <!--### NAV BAR ###-->
-      <nav class="main-nav">
+      <nav id="nav-bar" class="main-nav">
         <ul>
           <li>
             <a
@@ -117,7 +118,7 @@
     <div class="main">
 
       <!--### ABOUT SECTION ###-->
-      <section class="about">
+      <section id="about" class="about">
         <h2>
           About Us
         </h2>
@@ -174,7 +175,7 @@
       </section>
 
       <!--### CATNIP 101 SECTION ###-->
-      <section class="catnip">
+      <section id="catnip" class="catnip">
 
         <h2>
           How Catnip Transcends Your Feline Friends
@@ -221,7 +222,7 @@
 
 
       <!-- ### PRODUCTS SECTION ### -->
-      <section class="products">
+      <section id="products" class="products">
 
         <h2>
           Our Products
@@ -306,7 +307,7 @@
 
 
       <!-- ### WENDY VIDEOS SECTION ### -->
-      <section class="wendy">
+      <section id="wendy" class="wendy">
 
         <h2>
           Wendy's Wild Laughs!
